fix logo crop on mobile

--- a/public/assets/css/one.style.css
+++ b/public/assets/css/one.style.css
@@ -938,8 +938,8 @@ a.block-link {
 
 #brave-hero-cd .text-group-logo-CD {
   background: url('../img/CD_BR_logos.svg') left center / cover no-repeat;
-  width: 450px;
-  height: 64px;
+  width: 420px;
+  height: 60px;
   margin-bottom: 1em;
 }
 
